# rust-abm

./: Cargo.toml
data/: people.csv
src/: data.rs  io.rs  lib.rs  systems.rs
