[package]
name = "abby"
version = "0.1.0"
authors = ["finnkauski <iwiivi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.16.1", features = ["specs-derive"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
rand = "0.8.4"
